--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
 	<div class="container">
 	<header>
-		<h1 id="name">Your Name</h1>
+		<h1 id="name">Sanaa Battles</h1>
 		
 		<div id="designation">
 		
-			<span class="title">your designation</span>
-			<span class="organization">The organisation name</span>
+			<span class="title">student</span>
+			<span class="organization">Metro Tech</span>
 		
 		</div>
 		
 		<div class="contact">
-			<div class="email">john@example.com</div>
+			<div class="email">sanaamoore0809@gmail.com</div>
 		</div>
 		
 	</header>
