--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<div id="designation">
 		
-			<span class="title">student</span>
+			<span class="title">Student</span>
 			<span class="organization">Metro Tech</span>
 		
 		</div>
