--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 					
 					<!-- edit this/ row-wise-->
 					<tr>
-						<td>abc</td>
+						<td>Bachelor of Science | Bachelor of Science in Nursing (BSN)
+
+							Oklahoma State University, Oklahoma City, OK</td>
 						<td>abc</td>
 						<td>abc</td>
 						<td>abc</td>
