--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					
 					<!-- edit this/ row-wise-->
 					<tr>
-						<td>Bachelor of Science | Bachelor of Science in Nursing (BSN)
+						<td>Bachelor of Science | Bachelor of Science in Nursing (BSN) (58 credited hours completed)
 
 							Oklahoma State University, Oklahoma City, OK</td>
 						<td>abc</td>
