--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 						<td>Bachelor of Science | Bachelor of Science in Nursing (BSN) (58 credited hours completed)
 
 							Oklahoma State University, Oklahoma City, OK</td>
-						<td>abc</td>
+						<td> High School Diploma
+
+							John Marshall High School, Oklahoma City, OK
+						</td>/td>
 						<td>abc</td>
 						<td>abc</td>
 					</tr>
