--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
 
 							John Marshall High School, Oklahoma City, OK
 						</td>/td>
-						<td></td>
+						<td> Phlebotomy Technician 
+							Phlebotomy Training Specialists, Oklahoma City, OK
+						</td>
 						<td></td>
 					</tr>
 					
 					<tr> <!-- row2 -->
-						<td>abc</td>
-						<td>abc</td>
-						<td>abc</td>
-						<td>abc</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 					</tr>					
 					
 				</table>
