--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 						<td>Bachelor of Science | Bachelor of Science in Nursing (BSN) (58 credited hours completed)
 
 							Oklahoma State University, Oklahoma City, OK</td>
-						<td> High School Diploma
+						<td> High School Diploma |
 
 							John Marshall High School, Oklahoma City, OK
 						</td>/td>
-						<td> Phlebotomy Technician 
+						<td> Phlebotomy Technician |
 							Phlebotomy Training Specialists, Oklahoma City, OK
 						</td>   
 						<td></td>
