--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div class="content" role=main>
 	
 		<section id="objective">
-			<h2 class="title">Objective</h2>
+			<h2 class="title">Dedicated customer service professional with knowledge of service deliverly and proven multitasking ablibilties. Committed to maintaing professional relationships to increase profitablity and drive business results.</h2>
 			<div class="description">
 				<p>
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
