--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 	<div class="content" role=main>
 	
 		<section id="objective">
-			<h2 class="title">Dedicated customer service professional with knowledge of service deliverly and proven multitasking ablibilties. Committed to maintaing professional relationships to increase profitablity and drive business results.</h2>
-			<div class="description">
+			<h2 class="title">Objective 
 				<p>
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 				</p>			
