new objective listed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 		<section id="objective">
 			<h2 class="title">Objective 
 				<p>
-					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+					Dedicated Customer Service professional with knowledge of service delivery and proven multitasking abilities. Committed to maintaining professional relationships 
+					to increase profitability and drive business results.
 				</p>			
 			</div> <!-- end description -->
 		</section>
