--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</section>
 			
 		<section id="projects">
-			<h2 class="title">Projects Undertaken</h2>
+			<h2 class="title">Work History</h2>
 			<div class="description">
 				
 				<!-- Project 1 -->
