--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<h2 class="title">Work History</h2>
 			<div class="description">
 				
-				<!-- Project 1 -->
+				<!-- Listed Work History -->
 				<section class="project">
 					<h3 class="title">Title of the project</h3>
 					<div class="meta">
