adding work history for costco

--- a/index.html
+++ b/index.html
@@ -82,12 +82,17 @@
 				
 				<!-- Listed Work History -->
 				<section class="project">
-					<h3 class="title">Title of the project</h3>
+					<h3 class="title">Inbound and Outbound Call Center Representative</h3>
 					<div class="meta">
-						<span class="field">Project Field</span> <span class="date">Aug 2010 - Nov2010</span>
+						<span class="field">Costco Call Center | Oklahoma City, OK</span> <span class="date">Aug 2010 - Nov2010</span>
 					</div>
-					<p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-				</section> <!-- end project description -->
+					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times
+						Managed high call volumes
+						Mainatined strong relationships with customers, leading to increased business
+						Mastered multipled software systems seamlessly while navigating calls.
+						Exceeded daily expectations of inbound and outbound call quotas
+						Educated cuustomers on offers and upsold products and proceded in price changes 
+
 				
 				<!-- project 2 -->
 				<section class="project">
