chnaged the date on costco

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<section class="project">
 					<h3 class="title">Inbound and Outbound Call Center Representative</h3>
 					<div class="meta">
-						<span class="field">Costco Call Center | Oklahoma City, OK</span> <span class="date">Aug 2010 - Nov2010</span>
+						<span class="field">Costco Call Center | Oklahoma City, OK</span> <span class="date">05/2023 - Currently</span>
 					</div>
 					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times
 						Managed high call volumes
