--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</div>
 					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times
 
-						Managed high call volumes
+						Managed high call volumes </div>
 
 						Mainatined strong relationships with customers, leading to increased business
 
