--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 					<div class="meta">
 						<span class="field">Costco Call Center | Oklahoma City, OK</span> <span class="date">05/2023 - Currently</span>
 					</div>
-					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times
+					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times  </section>div> 
 
 						Managed high call volumes </div>
 
-						Mainatined strong relationships with customers, leading to increased business
+						Mainatined strong relationships with customers, leading to increased business  </div>
 
-						Mastered multipled software systems seamlessly while navigating calls.
+						Mastered multipled software systems seamlessly while navigating calls.   </div>
 
-						Exceeded daily expectations of inbound and outbound call quotas
+						Exceeded daily expectations of inbound and outbound call quotas    </div>
 
 						Educated cuustomers on offers and upsold products and proceded in price changes 
 
