--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<div class="meta">
 						<span class="field">Costco Call Center | Oklahoma City, OK</span> <span class="date">05/2023 - Currently</span>
 					</div>
-					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times  </section>div> 
+					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times 
 
 						Managed high call volumes </div>
 
