--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 					<h3 class="title"> Inbound and Outbound Call Center Representative</h3>
 					<div class="meta">
 						<span class="field">Costco Call Center | Oklahoma City, OK</span> <span class="date">05/2023 - Currently</span>
-					</div>
-					<p class="description"> Deescalated calls effectively; ensuring client satisfaction at all times 
+					
+			</div> class="description"> Deescalated calls effectively; ensuring client satisfaction at all times 
 
-						Managed high call volumes </div>
+						Managed high call volumes 
 
-						Mainatined strong relationships with customers, leading to increased business  </div>
+						Mainatined strong relationships with customers, leading to increased business  
 
-						Mastered multipled software systems seamlessly while navigating calls.   </div>
+						Mastered multipled software systems seamlessly while navigating calls.   
 
-						Exceeded daily expectations of inbound and outbound call quotas    </div>
+						Exceeded daily expectations of inbound and outbound call quotas    
 
 						Educated cuustomers on offers and upsold products and proceded in price changes 
 
